// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyncSettingField should render boolean setting as checkbox 1`] = `
<TextButtonField
  blank={Object {}}
  buttonAction={[Function]}
  buttonText={
    <ButtonTooltip
      tooltipId="force"
    />
  }
  className=""
  disabled={false}
  fieldRequired={false}
  fieldSelector={[Function]}
  inputClassName="col-md-6"
  item={
    Object {
      "description": "Should importing overwrite locked templates?",
      "id": 46,
      "name": "force",
      "settingsType": "bool",
      "value": false,
    }
  }
  label="undefined "
  name="import.force"
  tooltipHelp={
    <FieldLevelHelp
      buttonClass=""
      content={
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Should importing overwrite locked templates?",
            }
          }
        />
      }
      placement="top"
      rootClose={true}
    />
  }
/>
`;

exports[`SyncSettingField should render setting with input field 1`] = `
<TextButtonField
  blank={Object {}}
  buttonAction={[Function]}
  buttonText={
    <ButtonTooltip
      tooltipId="filter"
    />
  }
  className=""
  disabled={false}
  fieldRequired={false}
  fieldSelector={[Function]}
  inputClassName="col-md-6"
  item={
    Object {
      "description": "Import or export names matching this regex (case-insensitive; snippets are not filtered)",
      "id": 47,
      "name": "filter",
      "settingsType": "string",
      "value": "",
    }
  }
  label="undefined "
  name="import.filter"
  tooltipHelp={
    <FieldLevelHelp
      buttonClass=""
      content={
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Import or export names matching this regex (case-insensitive; snippets are not filtered)",
            }
          }
        />
      }
      placement="top"
      rootClose={true}
    />
  }
/>
`;

exports[`SyncSettingField should render setting with select choices 1`] = `
<TextButtonField
  blank={Object {}}
  buttonAction={[Function]}
  buttonText={
    <ButtonTooltip
      tooltipId="associate"
    />
  }
  className=""
  disabled={false}
  fieldRequired={false}
  fieldSelector={[Function]}
  inputClassName="col-md-6"
  item={
    Object {
      "description": "Associate templates to OS, organization and location",
      "id": 45,
      "name": "associate",
      "selection": Array [
        Object {
          "label": "New",
          "value": "new",
        },
        Object {
          "label": "Never",
          "value": "never",
        },
        Object {
          "label": "Always",
          "value": "always",
        },
      ],
      "settingsType": "string",
      "value": "new",
    }
  }
  label="undefined "
  name="import.associate"
  tooltipHelp={
    <FieldLevelHelp
      buttonClass=""
      content={
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Associate templates to OS, organization and location",
            }
          }
        />
      }
      placement="top"
      rootClose={true}
    />
  }
>
  new
</TextButtonField>
`;
